Regression : crash opening file with uv from GN primitive #103837

Closed
opened 2023-01-12 17:22:41 +01:00 by Julien Duroure · 12 comments
Member

System Information
Operating system: Mint
Graphics card: Nvidia RTX

Blender Version
Broken: 3.5 alpha 2b4bf586ad (today build)
Worked: 3.5 alpha 3 days ago

Caused by d397ecae32

Short description of error
Segmentation Fault opening the attached file:

26_material_override_by_modifiers.blend

Exact steps for others to reproduce the error
Open the file
The daily build 3 days ago opened it without any issue.

**System Information** Operating system: Mint Graphics card: Nvidia RTX **Blender Version** Broken: 3.5 alpha 2b4bf586ade5 (today build) Worked: 3.5 alpha 3 days ago Caused by d397ecae32 **Short description of error** Segmentation Fault opening the attached file: [26_material_override_by_modifiers.blend](https://archive.blender.org/developer/F14146011/26_material_override_by_modifiers.blend) **Exact steps for others to reproduce the error** Open the file The daily build 3 days ago opened it without any issue.
Author
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure
Member

Added subscribers: @lichtwerk, @PratikPB2123

Added subscribers: @lichtwerk, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, I can repro the crash. Not bisected yet but I suspect 6c774feba2
@lichtwerk , can you check? On my end, crash did not happen in debug-lite build (neither with --debug and -t flag).

Hi, I can repro the crash. Not bisected yet but I suspect 6c774feba2 @lichtwerk , can you check? On my end, crash did not happen in debug-lite build (neither with --debug and -t flag).
Member

Can also repro, will check

Can also repro, will check
Member

Getting this:

==1805984==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x602000144aa0 at pc 0x7fac16a49d21 bp 0x7ffd31934690 sp 0x7ffd31933e40
WRITE of size 6 at 0x602000144aa0 thread T0
    - 0 0x7fac16a49d20 in __interceptor_memcpy (/lib64/libasan.so.8+0x49d20)
    - 1 0x1c2f2a3f in BLI_strncpy /blender/source/blender/blenlib/intern/string.c:73
    - 2 0x3cfe1aa in version_geometry_nodes_primitive_uv_maps /blender/source/blender/blenloader/intern/versioning_300.cc:900
    - 3 0x3d388c9 in blo_do_versions_300 /blender/source/blender/blenloader/intern/versioning_300.cc:3822
    - 4 0x3bb5da7 in do_versions /blender/source/blender/blenloader/intern/readfile.cc:3539
    - 5 0x3bbaf29 in blo_read_file_internal /blender/source/blender/blenloader/intern/readfile.cc:3873
    - 6 0x3db1c8f in BLO_read_from_file /blender/source/blender/blenloader/intern/readblenentry.cc:400
    - 7 0xbed6eb3 in BKE_blendfile_read /blender/source/blender/blenkernel/intern/blendfile.c:502
    - 8 0x3a623ef in WM_file_read /blender/source/blender/windowmanager/intern/wm_files.c:963
    - 9 0x3a6ebad in wm_file_read_opwrap /blender/source/blender/windowmanager/intern/wm_files.c:2594
    - 10 0x3a6fbaf in wm_open_mainfile__open /blender/source/blender/windowmanager/intern/wm_files.c:2716
    - 11 0x3a6ef26 in operator_state_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2630
    - 12 0x3a6fe0d in wm_open_mainfile_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2740
    - 13 0x3a6f1e6 in wm_open_mainfile__discard_changes /blender/source/blender/windowmanager/intern/wm_files.c:2669
    - 14 0x3a6ef26 in operator_state_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2630
    - 15 0x3a6fe0d in wm_open_mainfile_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2740
    - 16 0x3a6fe36 in wm_open_mainfile_invoke /blender/source/blender/windowmanager/intern/wm_files.c:2745
    - 17 0x3a236f0 in wm_operator_invoke /blender/source/blender/windowmanager/intern/wm_event_system.cc:1474
    - 18 0x3a2557d in wm_operator_call_internal /blender/source/blender/windowmanager/intern/wm_event_system.cc:1707
    - 19 0x3a25682 in WM_operator_name_call_ptr /blender/source/blender/windowmanager/intern/wm_event_system.cc:1721
    - 20 0x3a26b95 in WM_operator_name_call_ptr_with_depends_on_cursor /blender/source/blender/windowmanager/intern/wm_event_system.cc:1914
    - 21 0x9de572c in ui_apply_but_funcs_after /blender/source/blender/editors/interface/interface_handlers.cc:1017
    - 22 0x9e77561 in ui_handler_region_menu /blender/source/blender/editors/interface/interface_handlers.cc:11418
    - 23 0x3a1c67b in wm_handler_ui_call /blender/source/blender/windowmanager/intern/wm_event_system.cc:791
    - 24 0x3a357c8 in wm_handlers_do_intern /blender/source/blender/windowmanager/intern/wm_event_system.cc:3244
    - 25 0x3a368f2 in wm_handlers_do /blender/source/blender/windowmanager/intern/wm_event_system.cc:3361
    - 26 0x3a3faee in wm_event_do_handlers /blender/source/blender/windowmanager/intern/wm_event_system.cc:3954
    - 27 0x39fac44 in WM_main /blender/source/blender/windowmanager/intern/wm.c:640
    - 28 0x7cc0c6 in main /blender/source/creator/creator.c:585
    - 29 0x7fac0ec2950f in __libc_start_call_main (/lib64/libc.so.6+0x2950f)
    - 30 0x7fac0ec295c8 in __libc_start_main_impl (/lib64/libc.so.6+0x295c8)
    - 31 0x7cb454 in _start (/build_linux_debug/bin/blender+0x7cb454)

0x602000144aa0 is located 4 bytes to the right of 12-byte region [0x602000144a90,0x602000144a9c)
allocated by thread T0 here:
    - 0 0x7fac16aba097 in calloc (/lib64/libasan.so.8+0xba097)
    - 1 0x1c4374e3 in MEM_lockfree_callocN /blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:208
    - 2 0x55c6183 in bNodeSocketValueBoolean* MEM_cnew<bNodeSocketValueBoolean>(char const*) /blender/intern/guardedalloc/MEM_guardedalloc.h:302
    - 3 0x55bb943 in node_socket_init_default_value /blender/source/blender/nodes/intern/node_socket.cc:316
    - 4 0xffd68d in node_socket_set_typeinfo /blender/source/blender/blenkernel/intern/node.cc:1213
    - 5 0x1001212 in make_socket /blender/source/blender/blenkernel/intern/node.cc:1549
    - 6 0x1002461 in nodeAddSocket /blender/source/blender/blenkernel/intern/node.cc:1704
    - 7 0x1002bae in nodeAddStaticSocket /blender/source/blender/blenkernel/intern/node.cc:1925
    - 8 0x55d3cd4 in blender::nodes::decl::Bool::build(bNodeTree&, bNode&) const /blender/source/blender/nodes/intern/node_socket_declarations.cc:272
    - 9 0x55b9437 in refresh_socket_list /blender/source/blender/nodes/intern/node_socket.cc:196
    - 10 0x55ba901 in refresh_node /blender/source/blender/nodes/intern/node_socket.cc:252
    - 11 0x55bad56 in node_verify_sockets /blender/source/blender/nodes/intern/node_socket.cc:265
    - 12 0xffbab4 in node_add_sockets_from_type /blender/source/blender/blenkernel/intern/node.cc:1079
    - 13 0xffc708 in node_init /blender/source/blender/blenkernel/intern/node.cc:1131
    - 14 0xffd3d9 in node_set_typeinfo /blender/source/blender/blenkernel/intern/node.cc:1191
    - 15 0x1007074 in nodeAddNode /blender/source/blender/blenkernel/intern/node.cc:2217
    - 16 0x1007679 in nodeAddStaticNode /blender/source/blender/blenkernel/intern/node.cc:2246
    - 17 0x3cfd30d in version_geometry_nodes_primitive_uv_maps /blender/source/blender/blenloader/intern/versioning_300.cc:862
    - 18 0x3d388c9 in blo_do_versions_300 /blender/source/blender/blenloader/intern/versioning_300.cc:3822
    - 19 0x3bb5da7 in do_versions /blender/source/blender/blenloader/intern/readfile.cc:3539
    - 20 0x3bbaf29 in blo_read_file_internal /blender/source/blender/blenloader/intern/readfile.cc:3873
    - 21 0x3db1c8f in BLO_read_from_file /blender/source/blender/blenloader/intern/readblenentry.cc:400
    - 22 0xbed6eb3 in BKE_blendfile_read /blender/source/blender/blenkernel/intern/blendfile.c:502
    - 23 0x3a623ef in WM_file_read /blender/source/blender/windowmanager/intern/wm_files.c:963
    - 24 0x3a6ebad in wm_file_read_opwrap /blender/source/blender/windowmanager/intern/wm_files.c:2594
    - 25 0x3a6fbaf in wm_open_mainfile__open /blender/source/blender/windowmanager/intern/wm_files.c:2716
    - 26 0x3a6ef26 in operator_state_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2630
    - 27 0x3a6fe0d in wm_open_mainfile_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2740
    - 28 0x3a6f1e6 in wm_open_mainfile__discard_changes /blender/source/blender/windowmanager/intern/wm_files.c:2669
    - 29 0x3a6ef26 in operator_state_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2630

SUMMARY: AddressSanitizer: heap-buffer-overflow (/lib64/libasan.so.8+0x49d20) in __interceptor_memcpy
Shadow bytes around the buggy address:
  0x0c0480020900: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x0c0480020910: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x0c0480020920: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x0c0480020930: fa fa fa fa fa fa fa fa fa fa fa fa fa fa 00 04
  0x0c0480020940: fa fa fa fa fa fa fa fa fa fa 00 00 fa fa 00 04
=>0x0c0480020950: fa fa 00 04[fa]fa 00 04 fa fa 00 04 fa fa 00 00
  0x0c0480020960: fa fa 00 00 fa fa 00 04 fa fa 00 00 fa fa 00 00
  0x0c0480020970: fa fa 00 00 fa fa 00 04 fa fa 00 04 fa fa 00 04
  0x0c0480020980: fa fa 00 00 fa fa 00 00 fa fa 00 00 fa fa 00 04
  0x0c0480020990: fa fa 00 00 fa fa fd fd fa fa fd fd fa fa 00 04
  0x0c04800209a0: fa fa 00 00 fa fa 00 00 fa fa 00 04 fa fa 00 00
Shadow byte legend (one shadow byte represents 8 application bytes):
  Addressable:           00
  Partially addressable: 01 02 03 04 05 06 07 
  Heap left redzone:       fa
  Freed heap region:       fd
  Stack left redzone:      f1
  Stack mid redzone:       f2
  Stack right redzone:     f3
  Stack after return:      f5
  Stack use after scope:   f8
  Global redzone:          f9
  Global init order:       f6
  Poisoned by user:        f7
  Container overflow:      fc
  Array cookie:            ac
  Intra object redzone:    bb
  ASan internal:           fe
  Left alloca redzone:     ca
  Right alloca redzone:    cb
==1805984==ABORTING
Getting this: ``` ==1805984==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x602000144aa0 at pc 0x7fac16a49d21 bp 0x7ffd31934690 sp 0x7ffd31933e40 WRITE of size 6 at 0x602000144aa0 thread T0 - 0 0x7fac16a49d20 in __interceptor_memcpy (/lib64/libasan.so.8+0x49d20) - 1 0x1c2f2a3f in BLI_strncpy /blender/source/blender/blenlib/intern/string.c:73 - 2 0x3cfe1aa in version_geometry_nodes_primitive_uv_maps /blender/source/blender/blenloader/intern/versioning_300.cc:900 - 3 0x3d388c9 in blo_do_versions_300 /blender/source/blender/blenloader/intern/versioning_300.cc:3822 - 4 0x3bb5da7 in do_versions /blender/source/blender/blenloader/intern/readfile.cc:3539 - 5 0x3bbaf29 in blo_read_file_internal /blender/source/blender/blenloader/intern/readfile.cc:3873 - 6 0x3db1c8f in BLO_read_from_file /blender/source/blender/blenloader/intern/readblenentry.cc:400 - 7 0xbed6eb3 in BKE_blendfile_read /blender/source/blender/blenkernel/intern/blendfile.c:502 - 8 0x3a623ef in WM_file_read /blender/source/blender/windowmanager/intern/wm_files.c:963 - 9 0x3a6ebad in wm_file_read_opwrap /blender/source/blender/windowmanager/intern/wm_files.c:2594 - 10 0x3a6fbaf in wm_open_mainfile__open /blender/source/blender/windowmanager/intern/wm_files.c:2716 - 11 0x3a6ef26 in operator_state_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2630 - 12 0x3a6fe0d in wm_open_mainfile_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2740 - 13 0x3a6f1e6 in wm_open_mainfile__discard_changes /blender/source/blender/windowmanager/intern/wm_files.c:2669 - 14 0x3a6ef26 in operator_state_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2630 - 15 0x3a6fe0d in wm_open_mainfile_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2740 - 16 0x3a6fe36 in wm_open_mainfile_invoke /blender/source/blender/windowmanager/intern/wm_files.c:2745 - 17 0x3a236f0 in wm_operator_invoke /blender/source/blender/windowmanager/intern/wm_event_system.cc:1474 - 18 0x3a2557d in wm_operator_call_internal /blender/source/blender/windowmanager/intern/wm_event_system.cc:1707 - 19 0x3a25682 in WM_operator_name_call_ptr /blender/source/blender/windowmanager/intern/wm_event_system.cc:1721 - 20 0x3a26b95 in WM_operator_name_call_ptr_with_depends_on_cursor /blender/source/blender/windowmanager/intern/wm_event_system.cc:1914 - 21 0x9de572c in ui_apply_but_funcs_after /blender/source/blender/editors/interface/interface_handlers.cc:1017 - 22 0x9e77561 in ui_handler_region_menu /blender/source/blender/editors/interface/interface_handlers.cc:11418 - 23 0x3a1c67b in wm_handler_ui_call /blender/source/blender/windowmanager/intern/wm_event_system.cc:791 - 24 0x3a357c8 in wm_handlers_do_intern /blender/source/blender/windowmanager/intern/wm_event_system.cc:3244 - 25 0x3a368f2 in wm_handlers_do /blender/source/blender/windowmanager/intern/wm_event_system.cc:3361 - 26 0x3a3faee in wm_event_do_handlers /blender/source/blender/windowmanager/intern/wm_event_system.cc:3954 - 27 0x39fac44 in WM_main /blender/source/blender/windowmanager/intern/wm.c:640 - 28 0x7cc0c6 in main /blender/source/creator/creator.c:585 - 29 0x7fac0ec2950f in __libc_start_call_main (/lib64/libc.so.6+0x2950f) - 30 0x7fac0ec295c8 in __libc_start_main_impl (/lib64/libc.so.6+0x295c8) - 31 0x7cb454 in _start (/build_linux_debug/bin/blender+0x7cb454) 0x602000144aa0 is located 4 bytes to the right of 12-byte region [0x602000144a90,0x602000144a9c) allocated by thread T0 here: - 0 0x7fac16aba097 in calloc (/lib64/libasan.so.8+0xba097) - 1 0x1c4374e3 in MEM_lockfree_callocN /blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:208 - 2 0x55c6183 in bNodeSocketValueBoolean* MEM_cnew<bNodeSocketValueBoolean>(char const*) /blender/intern/guardedalloc/MEM_guardedalloc.h:302 - 3 0x55bb943 in node_socket_init_default_value /blender/source/blender/nodes/intern/node_socket.cc:316 - 4 0xffd68d in node_socket_set_typeinfo /blender/source/blender/blenkernel/intern/node.cc:1213 - 5 0x1001212 in make_socket /blender/source/blender/blenkernel/intern/node.cc:1549 - 6 0x1002461 in nodeAddSocket /blender/source/blender/blenkernel/intern/node.cc:1704 - 7 0x1002bae in nodeAddStaticSocket /blender/source/blender/blenkernel/intern/node.cc:1925 - 8 0x55d3cd4 in blender::nodes::decl::Bool::build(bNodeTree&, bNode&) const /blender/source/blender/nodes/intern/node_socket_declarations.cc:272 - 9 0x55b9437 in refresh_socket_list /blender/source/blender/nodes/intern/node_socket.cc:196 - 10 0x55ba901 in refresh_node /blender/source/blender/nodes/intern/node_socket.cc:252 - 11 0x55bad56 in node_verify_sockets /blender/source/blender/nodes/intern/node_socket.cc:265 - 12 0xffbab4 in node_add_sockets_from_type /blender/source/blender/blenkernel/intern/node.cc:1079 - 13 0xffc708 in node_init /blender/source/blender/blenkernel/intern/node.cc:1131 - 14 0xffd3d9 in node_set_typeinfo /blender/source/blender/blenkernel/intern/node.cc:1191 - 15 0x1007074 in nodeAddNode /blender/source/blender/blenkernel/intern/node.cc:2217 - 16 0x1007679 in nodeAddStaticNode /blender/source/blender/blenkernel/intern/node.cc:2246 - 17 0x3cfd30d in version_geometry_nodes_primitive_uv_maps /blender/source/blender/blenloader/intern/versioning_300.cc:862 - 18 0x3d388c9 in blo_do_versions_300 /blender/source/blender/blenloader/intern/versioning_300.cc:3822 - 19 0x3bb5da7 in do_versions /blender/source/blender/blenloader/intern/readfile.cc:3539 - 20 0x3bbaf29 in blo_read_file_internal /blender/source/blender/blenloader/intern/readfile.cc:3873 - 21 0x3db1c8f in BLO_read_from_file /blender/source/blender/blenloader/intern/readblenentry.cc:400 - 22 0xbed6eb3 in BKE_blendfile_read /blender/source/blender/blenkernel/intern/blendfile.c:502 - 23 0x3a623ef in WM_file_read /blender/source/blender/windowmanager/intern/wm_files.c:963 - 24 0x3a6ebad in wm_file_read_opwrap /blender/source/blender/windowmanager/intern/wm_files.c:2594 - 25 0x3a6fbaf in wm_open_mainfile__open /blender/source/blender/windowmanager/intern/wm_files.c:2716 - 26 0x3a6ef26 in operator_state_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2630 - 27 0x3a6fe0d in wm_open_mainfile_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2740 - 28 0x3a6f1e6 in wm_open_mainfile__discard_changes /blender/source/blender/windowmanager/intern/wm_files.c:2669 - 29 0x3a6ef26 in operator_state_dispatch /blender/source/blender/windowmanager/intern/wm_files.c:2630 SUMMARY: AddressSanitizer: heap-buffer-overflow (/lib64/libasan.so.8+0x49d20) in __interceptor_memcpy Shadow bytes around the buggy address: 0x0c0480020900: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x0c0480020910: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x0c0480020920: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x0c0480020930: fa fa fa fa fa fa fa fa fa fa fa fa fa fa 00 04 0x0c0480020940: fa fa fa fa fa fa fa fa fa fa 00 00 fa fa 00 04 =>0x0c0480020950: fa fa 00 04[fa]fa 00 04 fa fa 00 04 fa fa 00 00 0x0c0480020960: fa fa 00 00 fa fa 00 04 fa fa 00 00 fa fa 00 00 0x0c0480020970: fa fa 00 00 fa fa 00 04 fa fa 00 04 fa fa 00 04 0x0c0480020980: fa fa 00 00 fa fa 00 00 fa fa 00 00 fa fa 00 04 0x0c0480020990: fa fa 00 00 fa fa fd fd fa fa fd fd fa fa 00 04 0x0c04800209a0: fa fa 00 00 fa fa 00 00 fa fa 00 04 fa fa 00 00 Shadow byte legend (one shadow byte represents 8 application bytes): Addressable: 00 Partially addressable: 01 02 03 04 05 06 07 Heap left redzone: fa Freed heap region: fd Stack left redzone: f1 Stack mid redzone: f2 Stack right redzone: f3 Stack after return: f5 Stack use after scope: f8 Global redzone: f9 Global init order: f6 Poisoned by user: f7 Container overflow: fc Array cookie: ac Intra object redzone: bb ASan internal: fe Left alloca redzone: ca Right alloca redzone: cb ==1805984==ABORTING ```

This issue was referenced by 2fb829a2de

This issue was referenced by 2fb829a2deb809af6589a2eec19c16fdf4718de6
Member
Added subscribers: @HooglyBoogly, @JacquesLucke, @CharlieJolly
Member

Caused by d397ecae32 which added a new socket, so version_geometry_nodes_primitive_uv_maps was getting the wrong socket with ->next

Possible fix incoming...

CC @CharlieJolly
CC @HooglyBoogly
CC @JacquesLucke

Caused by d397ecae32 which added a new socket, so `version_geometry_nodes_primitive_uv_maps` was getting the wrong socket with `->next` Possible fix incoming... CC @CharlieJolly CC @HooglyBoogly CC @JacquesLucke
Philipp Oeser changed title from Segmentation Fault opening a file to Regression : crash opening file with uv from GN primitive 2023-01-13 13:07:44 +01:00

Added subscriber: @mod_moder

Added subscriber: @mod_moder

Seems more like a versioning issue... But not sure

Seems more like a versioning issue... But not sure
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2023-01-13 15:00:37 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103837
No description provided.